# mxf

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: main.yml
api/: Cargo.toml
api/src/: claims.rs  house_filter.rs  lib.rs  pages.rs  session.rs
mxf_api/: Cargo.toml
mxf_api/src/: claims.rs  database.rs  house_listing.rs  lib.rs  order.rs  pages.rs  session.rs
mxf_entity/: Cargo.toml
mxf_entity/src/: database.rs  errors.rs  house_filter.rs  house_listing.rs  internal.rs  lib.rs  order.rs  session_data.rs  user.rs
mxf_entity/src/database/: house_listing.rs  order.rs  user.rs
mxf_entity/src/internal/: errors.rs  house_filter.rs  order_data.rs  session_data.rs
mxf_service/: Cargo.toml
mxf_service/src/: cached_db.rs  house_service.rs  lib.rs  order_service.rs  pool.rs  user_service.rs
service/: Cargo.toml
service/src/: house_listing.rs  lib.rs  query.rs
src/: api.rs  main.rs
src/api/: claims.rs  pages.rs  queries.rs  session.rs
static/css/: style.css
static/database/: orders.sqlite
templates/: adminpage.html  base.html.hbs  employeepage.html  housedetail.html.hbs  index.html.hbs  load_image.html.hbs  login.html.hbs  mine.html.hbs  modifyhouse.html  modifyhouse.html.hbs  modifylease.html  my_listings.html.hbs  register.html.hbs  scripts_mxf.html.hbs  style.html.hbs  user.html.hbs  zufang.html.hbs  zufang_scripts.html.hbs
templates/partials/: base.html.hbs  load_image.html.hbs  login_base.html.hbs  style.html.hbs
