[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
tokio = "1.26.0"
chrono = "0.4.23"
jsonwebtoken = { version = "9.2.0", default-features = false }
lazy_static = "1.4.0"
rocket = { version = "0.5.0-rc.4", features = ["json", "secrets"] }
serde = { version = "1.0.148", features = ["derive"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
sea-orm-rocket = { version = "0.5.3" }
