[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1" }
sea-orm-rocket = { version = "0.5.3" }
sea-orm = { version = "0.12.6", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
rocket = { version = "0.5.0-rc.4", features = ["json", "secrets"] }
serde = { version = "1.0.148", features = ["derive"] }
